# utils_ros2

./: CMakeLists.txt  README.md  package.xml
include/: Trajectory.h
launch/: write_keyframe_image.launch  write_keyframe_images.launch  write_keyframe_images.xml
scripts/: README.md  extract_bag_stereo.py  extract_images.py
src/: write_keyframe_image.cpp
